# Doodle-Jump

./: CMakeLists.txt  README.md  main.cpp  test.cpp
config/: detection.yaml  game.yaml
game_camera/: CMakeLists.txt  camera.cpp  camera.h
game_common/: CMakeLists.txt  common.cpp  common.h  tool.cpp  tool.h
game_config/: CMakeLists.txt  config.cpp  config.h
game_detection/: face_detector.h
game_detector/: CMakeLists.txt
game_play/: CMakeLists.txt  fsm.cpp  fsm.h
game_resolver/: CMakeLists.txt  resolver.cpp  resolver.h
